Bug 14752 - smbXsrv_{open,session,tcon}_global_traverse_fn against invalid records
Summary: smbXsrv_{open,session,tcon}_global_traverse_fn against invalid records
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.14.5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-05 15:23 UTC by Stefan Metzmacher
Modified: 2021-07-19 06:31 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-14-test (2.87 KB, patch)
2021-07-08 09:09 UTC, Stefan Metzmacher
vl: review+
Details
Patch for v4-13-test (2.87 KB, text/plain)
2021-07-08 09:10 UTC, Stefan Metzmacher
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2021-07-05 15:23:08 UTC
I saw systems with locking.tdb records being part of:
  ctdb catdb smbXsrv_tcon_global.tdb

It's yet unknown how that happened, but we should not panic in srvsvc_*
calls because the info0 pointer was NULL.
Comment 1 Samba QA Contact 2021-07-06 11:09:04 UTC
This bug was referenced in samba master:

00bab5b3c821f272153a25ded9743460887a7907
Comment 2 Stefan Metzmacher 2021-07-08 09:09:41 UTC
Created attachment 16674 [details]
Patch for v4-14-test
Comment 3 Stefan Metzmacher 2021-07-08 09:10:08 UTC
Created attachment 16675 [details]
Patch for v4-13-test
Comment 4 Karolin Seeger 2021-07-12 12:11:59 UTC
(In reply to Stefan Metzmacher from comment #3)
Pushed to autobuild-v4-{14,13}-test.
Comment 5 Samba QA Contact 2021-07-12 13:53:04 UTC
This bug was referenced in samba v4-14-test:

8f7ab597969e6e834ef333d5cf314f770325d6a9
Comment 6 Samba QA Contact 2021-07-13 10:34:24 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.6):

8f7ab597969e6e834ef333d5cf314f770325d6a9
Comment 7 Samba QA Contact 2021-07-13 13:19:37 UTC
This bug was referenced in samba v4-13-test:

b9b1d98af4c7cd2326e12e1c3b734056663932d1
Comment 8 Samba QA Contact 2021-07-14 08:15:55 UTC
This bug was referenced in samba v4-13-stable (Release samba-4.13.10):

b9b1d98af4c7cd2326e12e1c3b734056663932d1
Comment 9 Karolin Seeger 2021-07-19 06:31:27 UTC
Closing out bug report.

Thanks!